--- a/port2.html
+++ b/port2.html
@@ -7,9 +7,9 @@
 
 
 
-<h1 style="background-color:brown;">Mahati Yerramilli</h1>
+<h1 style="background-color:palevioletred;">Mahati Yerramilli</h1>
 <h3 style="color:blueviolet;"> NJIT 31633111 Industrial Design </h3>
-<p style="color:brown;">My name is Mahati Yerramilli, and I am a first-year undergraduate student at NJIT <br> 
+<p style="color:purple ;">My name is Mahati Yerramilli, and I am a first-year undergraduate student at NJIT <br> 
     My major is industrial design, and it is under the Hillier College of Architecture. <br>
     I am interested in learning about product and UX design.</p>
 
@@ -21,22 +21,22 @@ width="500" height="300">
 <div id="div1">
     <div style="width:70%"></div>
     <h2>Information</h2> 
-    <table style="width:100%">
+    <table style="border:1px solid purple;">
     
         <tr>
-            <th>Education</th>
-            <th>Experience</th>
-            <th>Skills</th>
+            <th style="border:1px solid pink;">Education</th>
+            <th style="border:1px solid pink ;">Experience</th>
+            <th style="border:1px solid pink ;">Skills</th>
         </tr>
         <tr>
-            <td>East Brunswick High School</td>
-            <td>None</td>
-            <td> Communication, Computer Skills, Etc</td>
+            <td style="border:1px solid pink;" >East Brunswick High School</td>
+            <td style="border:1px solid pink;" >None</td>
+            <td style="border:1px solid pink;"> Communication, Computer Skills, Etc</td>
         </tr>
         <tr>
-            <td> New Jersey Institute of Technology</td>
-            <td>None</td>
-            <td>Softwares</td>
+            <td style="border:1px solid pink;"> New Jersey Institute of Technology</td>
+            <td style="border:1px solid pink;">None</td>
+            <td style="border:1px solid pink;" >Softwares</td>
         </tr>
     </table>
     </div>
